--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,13 +23,24 @@ jobs:
       - ruby/rspec-test
   rubocop:
     docker:
-      - image: cimg/ruby:2.6
+      - image: cimg/ruby:2.7.2
     executor: ruby/default
     steps:
       - checkout
       - ruby/install-deps:
           bundler-version: 2.1.4
       - ruby/rubocop-check
+  features:
+    docker:
+      - image: cimg/ruby:2.7.2
+    executor: ruby/default
+    steps:
+      - checkout
+      - ruby/install-deps:
+          bundler-version: 2.1.4
+      - run:
+          name: Feature tests
+          command: bundle exec rspec features
 
 workflows:
   build:
@@ -45,3 +56,4 @@ workflows:
           name: "rspec-ruby:2.5"
           ruby-version: "2.5"
       - rubocop
+      - features
